# DRPDF

./: .dockerignore  .gitignore  Dockerfile  README.md  app.json  pyproject.toml
.github/ISSUE_TEMPLATE/: 问题反馈_cn.yaml  问题反馈_en.yaml
.github/workflows/: exe-build.yml
docs/: ADVANCED.md  APIS.md  README_GUI.md  README_ja-JP.md  README_zh-CN.md
drpdf/: __init__.py  backend.py  cache.py  config.py  converter.py  doclayout.py  drpdf.py  gui.py  high_level.py  mcp_server.py  translator.py
script/: Dockerfile.China  Dockerfile.Demo  _pystand_static.int  setup.bat
test/: test_cache.py  test_converter.py  test_doclayout.py  test_translator.py
